Ensure that the modeladmin table doesn't overflow into the models list by wrapping it in a scrollable div, fixes #10

--- a/flaskext/static/css/admin.css
+++ b/flaskext/static/css/admin.css
@@ -37,6 +37,8 @@ form.modeladmin-filters { margin: 0; }
 form.modeladmin-filters ul { list-style-type: none; }
 form.modeladmin-filters select.field { margin-right: 10px; }
 
+div.form-wrapper { width: 100%; overflow: auto; }
+
 form textarea { height: 150px; }
 
 div.sidebar li.active { font-weight: bold; }
